@@ -198,6 +198,11 @@ struct pt box_disp(double y1, double y2, double ystep, double r,struct pt p0, st
  * gives false positives */
 int fast_ycylinder_box_intersect(double y1, double y2, double r,struct pt pcenter, double xs, double ys, double zs);
 
+
+/*fast test to see if the min/max of a polyrep structure (IndexedFaceSet, eg)  intersects a y-cylinder.
+ * gives false positives */
+int fast_ycylinder_polyrep_intersect(double y1, double y2, double r,struct pt pcenter, double scale, struct X3D_PolyRep *pr);
+
 /*fast test to see if a cone intersects a y-cylinder. */
 /*gives false positives. */
 int fast_ycylinder_cone_intersect(double y1, double y2, double r,struct pt pcenter, double halfheight, double baseradius);
